# snowflake-ds-05-ml-marimo

./: .gitignore  AGENTS.md  PLAN.md  README.md  connection.json.example  pyproject.toml
conf/: defaults.py
lib/: features.py  modelling.py  session.py  versioning.py
notebooks/: 01_feature_pipeline.py  02_training_pipeline.py  03_promotion_pipeline.py  04_serving_pipeline.py  05_monitoring_pipeline.py  orchestrator.py
